[project]
name = "llm-memory-agent"
version = "0.1.0"
description = "A long-term memory system for GPT that enables persistent, context-aware conversations using OpenAI APIs, ChromaDB for vector storage, and SQLite for metadata management."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "chromadb>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
]

[project.scripts]
memory-agent = "main:demo_memory_system"
memory-agent-interactive = "main:interactive_demo"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
]
